--- a/profiles/commons/themes/contrib/commons_origins/css/global.base.css
+++ b/profiles/commons/themes/contrib/commons_origins/css/global.base.css
@@ -92,7 +92,7 @@ input[type="button"] {
   -webkit-background-clip: padding;
   -moz-background-clip: padding;
   background-clip: padding-box;
-  background: #dddddd url('../images/button.png?1355157111') repeat-x;
+  background: #dddddd url('../images/button.png?1360145209') repeat-x;
   background-image: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #ffffff), color-stop(100%, #dddddd));
   background-image: -webkit-linear-gradient(#ffffff, #dddddd);
   background-image: -moz-linear-gradient(#ffffff, #dddddd);
@@ -347,7 +347,7 @@ optgroup::-moz-focus-inner {
 .ie6_button,
 * html button,
 * html a.button {
-  background: #dddddd url('../images/button.png?1355157111') repeat-x;
+  background: #dddddd url('../images/button.png?1360145209') repeat-x;
   border: 1px solid;
   border-color: #dddddd #bbbbbb #999999;
   cursor: pointer;
@@ -407,7 +407,7 @@ optgroup::-moz-focus-inner {
 .selectBox-dropdown {
   min-width: 150px;
   position: relative;
-  border: solid 1px #BBB;
+  border: solid 1px #bbbbbb;
   line-height: 1.5;
   text-decoration: none;
   text-align: left;
@@ -484,7 +484,7 @@ optgroup::-moz-focus-inner {
 /* line 78, ../sass/_selectBox.scss */
 .block-search .selectBox-dropdown .selectBox-label:after {
   content: '';
-  background: url('../images/icons-s7d91aa5443.png') 0 -1026px no-repeat;
+  background: url('../images/icons-sdd18561639.png') 0 -1356px no-repeat;
   width: 8px;
   height: 10px;
   display: inline-block;
@@ -506,8 +506,8 @@ optgroup::-moz-focus-inner {
   right: 0;
   width: 23px;
   height: 100%;
-  background: url('../images/jquery.selectBox-arrow.gif?1353005330') 50% center no-repeat;
-  border-left: solid 1px #BBB;
+  background: url('../images/jquery.selectBox-arrow.gif?1360145209') 50% center no-repeat;
+  border-left: solid 1px #bbbbbb;
 }
 /* line 100, ../sass/_selectBox.scss */
 .block-search .selectBox-dropdown .selectBox-arrow {
@@ -525,7 +525,7 @@ optgroup::-moz-focus-inner {
   z-index: 99999;
   max-height: 200px;
   min-height: 1em;
-  border: solid 1px #BBB;
+  border: solid 1px #bbbbbb;
   /* should be the same border width as .selectBox-dropdown */
   background: #FFF;
   -moz-box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2);
@@ -540,7 +540,7 @@ optgroup::-moz-focus-inner {
 .selectBox-inline {
   min-width: 150px;
   outline: none;
-  border: solid 1px #BBB;
+  border: solid 1px #bbbbbb;
   background: #FFF;
   display: inline-block;
   -webkit-border-radius: 4px;
@@ -569,7 +569,7 @@ optgroup::-moz-focus-inner {
 /* line 158, ../sass/_selectBox.scss */
 .selectBox-options LI A {
   line-height: 1.5;
-  padding: 0 .5em;
+  padding: 0 0.5em;
   white-space: nowrap;
   overflow: hidden;
   background: 6px center no-repeat;
@@ -597,14 +597,14 @@ optgroup::-moz-focus-inner {
   background: #EEE;
   font-weight: bold;
   line-height: 1.5;
-  padding: 0 .3em;
+  padding: 0 0.3em;
   white-space: nowrap;
 }
 
 /* Disabled state */
 /* line 190, ../sass/_selectBox.scss */
 .selectBox.selectBox-disabled {
-  color: #888 !important;
+  color: #888888 !important;
 }
 
 /* line 194, ../sass/_selectBox.scss */
@@ -616,7 +616,7 @@ optgroup::-moz-focus-inner {
 
 /* line 200, ../sass/_selectBox.scss */
 .selectBox-inline.selectBox-disabled {
-  color: #888 !important;
+  color: #888888 !important;
 }
 
 /* line 204, ../sass/_selectBox.scss */
@@ -857,7 +857,7 @@ code,
 kbd,
 samp {
   font-family: monospace, serif;
-  _font-family: 'courier new', monospace;
+  _font-family: "courier new", monospace;
   font-size: 1em;
 }
 
