--- a/profiles/commons/themes/contrib/commons_origins/sass/_custom.scss
+++ b/profiles/commons/themes/contrib/commons_origins/sass/_custom.scss
@@ -44,11 +44,13 @@ $primary_task_active: $page;
 $white: #fff;
 $dark_gray: rgb(51,51,51);
 $gray: rgb(102,102,102);
-$light_gray: rgb(165,165,165);
+$light_gray: rgb(231,226,220);
 $green: rgb(70,186,49);
 $dark_blue: rgb(51,102,153);
 $light_blue: rgb(39,131,185);
-$orange: rgb(255,153,0);
+$orange: rgb(243,124,48);
+$light_orange: rgb(248,160,43);
+$dark_orange: rgb(200,63,50);
 $lighter_gray: #eee;
 
 
