--- a/profiles/commons/themes/contrib/commons_origins/sass/_extend-styles.scss
+++ b/profiles/commons/themes/contrib/commons_origins/sass/_extend-styles.scss
@@ -1,6 +1,6 @@
 %divider-left {
-  border-left: 1px solid #4082A7;
-  @include box-shadow(#0F4363 -1px 0px 0px);
+  border-left: 1px solid #EFEAE4;
+  @include box-shadow(#EFEAE4 -1px 0px 0px);
 }
 
 %pod {
@@ -15,14 +15,14 @@
   padding: 10px 10px 20px 10px;
 }
 
-%btn-green {
+%btn-orange {
   box-shadow: 1px 1px 1px #ABE0A2 inset, 0 3px 3px rgba(#000, 0.09);
   padding: 0 10px;
   // needs latest Compass, add '@import "compass"' to your scss
-  background-color: #6eca5d; // Old browsers
-  @include filter-gradient(#6eca5d, #45bb2f, vertical); // IE6-9
-  @include background-image(linear-gradient(top,  #6eca5d 0%,#6cc95b 12%,#47bc33 33%,#45bb2f 100%));
-  border: 1px solid #249125;
+  background-color: #F37C30; // Old browsers
+  @include filter-gradient(#F37C30, #e09127, vertical); // IE6-9
+  @include background-image(linear-gradient(top,  #c3443d 0%,#f37c30 12%,#e09127 33%,#f8a02b 100%));
+  border: 1px solid #F37C30;
   @include border-radius(3px);
   color: $white;
   text-align: center;
