--- a/profiles/commons/themes/contrib/commons_origins/css/responsive.custom.css
+++ b/profiles/commons/themes/contrib/commons_origins/css/responsive.custom.css
@@ -40,6 +40,35 @@
     float: none;
     width: 100%;
   }
+
+  /* line 54, ../sass/responsive.custom.scss */
+  .view-commons-groups-directory .view-filters .form-text {
+    width: 280px;
+  }
+
+  /* line 58, ../sass/responsive.custom.scss */
+  #branding {
+    margin-right: 6px;
+  }
+
+  /* line 62, ../sass/responsive.custom.scss */
+  .commons-bw-create-all-widget-types {
+    left: -100px;
+    top: auto;
+    bottom: 0;
+  }
+
+  /* line 68, ../sass/responsive.custom.scss */
+  .page-node-add #edit-additional-settings {
+    width: 100%;
+    position: static;
+  }
+
+  /* line 73, ../sass/responsive.custom.scss */
+  .page-node-add .field-type-taxonomy-term-reference-form {
+    width: 100%;
+    position: static;
+  }
 }
 /*
  * Tablet sizes and up
@@ -49,3 +78,61 @@
  * Desktops/laptops and up
  */
 /* @media only screen and (min-width: 1025px) {} */
+@media only screen and (max-width: 935px) {
+  /* line 92, ../sass/responsive.custom.scss */
+  #name-and-slogan {
+    display: none;
+  }
+}
+@media only screen and (max-width: 570px) {
+  /* line 98, ../sass/responsive.custom.scss */
+  #header {
+    margin-right: 0;
+    position: relative;
+  }
+
+  /* line 103, ../sass/responsive.custom.scss */
+  .header-color-row-one {
+    border-top-width: 18px;
+  }
+
+  /* line 107, ../sass/responsive.custom.scss */
+  #menu-bar.nav {
+    border-right: 0;
+    -webkit-box-shadow: #4082a7 0px 0px 0px;
+    -moz-box-shadow: #4082a7 0px 0px 0px;
+    box-shadow: #4082a7 0px 0px 0px;
+  }
+  /* line 111, ../sass/responsive.custom.scss */
+  html #menu-bar.nav {
+    font-size: 87.5%;
+  }
+  /* line 116, ../sass/responsive.custom.scss */
+  #menu-bar.nav ul.menu li a {
+    font-size: 12px;
+    padding: 31px 7px 0px 7px;
+  }
+  /* line 121, ../sass/responsive.custom.scss */
+  #menu-bar.nav ul.menu li.main-menu-search {
+    display: inline-block;
+  }
+
+  /* line 127, ../sass/responsive.custom.scss */
+  .region-header {
+    height: auto;
+    position: absolute;
+    right: 10px;
+    top: -20px;
+  }
+
+  /* line 134, ../sass/responsive.custom.scss */
+  #block-search-form {
+    display: none;
+  }
+}
+@media only screen and (max-width: 430px) {
+  /* line 140, ../sass/responsive.custom.scss */
+  #name-and-slogan {
+    display: none;
+  }
+}
