--- a/profiles/commons/themes/contrib/commons_origins/css/responsive.smartphone.landscape.css
+++ b/profiles/commons/themes/contrib/commons_origins/css/responsive.smartphone.landscape.css
@@ -12,3 +12,8 @@
 html {
   font-size: 112.5%;
 }
+
+/* line 20, ../sass/responsive.smartphone.landscape.scss */
+body.front.logged-in .view-commons-homepage-content .article.node .node-content .field-name-body, body.front.logged-in .view-commons-homepage-content .node-teaser.node-group .node-content .field-name-body {
+  margin-right: 0;
+}
