--- a/profiles/commons/themes/contrib/commons_origins/sass/responsive.smartphone.landscape.scss
+++ b/profiles/commons/themes/contrib/commons_origins/sass/responsive.smartphone.landscape.scss
@@ -16,3 +16,7 @@
 html {
   font-size: 112.5%; 
 }
+
+body.front.logged-in .view-commons-homepage-content .article.node .node-content .field-name-body, body.front.logged-in .view-commons-homepage-content .node-teaser.node-group .node-content .field-name-body {
+  margin-right: 0;
+}
