--- a/sites/all/themes/commons_origins_lambeth/sass/_base.scss
+++ b/sites/all/themes/commons_origins_lambeth/sass/_base.scss
@@ -38,35 +38,28 @@ $green: rgb(70,186,49);
 $dark_blue: rgb(51,102,153);
 $light_blue: rgb(39,131,185);
 $orange: rgb(243,124,48);
+$lighter_orange: rgb(244,183,81);
 $light_orange: rgb(248,160,43);
 $dark_orange: rgb(200,63,50);
 $lighter_gray: #eee;
 
 $page: #e6e6e6;    // to match the page background, default is white
 
-/*
- * Wraps all header elements - branding and .region-header
- */
-#header {
-  height: 95px;
-  color: $white;
+/* Extend styles */
 
-}
+%btn-green {
+  box-shadow: 1px 1px 1px $light_orange inset, 0 3px 3px rgba(#000, 0.09);
+  padding: 0 10px;
+  // needs latest Compass, add '@import "compass"' to your scss
+  background-color: $orange; // Old browsers
+  @include filter-gradient($lighter_orange, $dark_orange, vertical); // IE6-9
+  @include background-image(linear-gradient(top,  $lighter_orange 0%,$light_orange 12%, $orange 33%,$dark_orange 100%));
+  border: #FFF;
+  text-align: center;
+  display: inline-block;
+  text-shadow: 1px 1px rgba(#000, 0.49);
 
-.header-color-row-one {
-  height: 74px;
-  background-color: $light_gray;
-  border-top: 4px solid darken($light_gray, 50%);
-
-  .boxshadow & {
-    @include box-shadow($dark_gray 0px -1px 0px);
-    margin-top: 1px;
+  &:hover {
+    text-decoration: none;
   }
-}
-
-.header-color-row-two {
-  background-color: $white;
-  height: 26px;
-  border-top: 1px solid lighten($light_gray, 10%);
-  border-bottom: 1px solid darken($light_gray, 10%);
 }
