--- a/sites/all/themes/commons_origins_lambeth/sass/lambeth-global.scss
+++ b/sites/all/themes/commons_origins_lambeth/sass/lambeth-global.scss
@@ -1,5 +1,9 @@
 @import "base";
+@import "icons/*.png";
 
+#page {
+  margin-top: -102px;
+}
 /*
  * H1 Node title
  */
@@ -140,7 +144,8 @@ a {
   float: left;
   vertical-align: top;
   margin:0;
-
+  border-color: #efeae4;
+  @include box-shadow (#efeae4 -1px 0px 0px);
   ul,
   ul.menu {
     margin: 0;
@@ -156,9 +161,15 @@ a {
     padding: 0;
 
     &:hover, &.active-trail {
-      /* background: image-url('main-nav-hover.png') repeat-x left top; */
+      background: none;
       .arrow {
-        background:image-url('main-nav-arrow.png');
+        &:before {
+          border-color: transparent transparent #FFF transparent;
+        }
+
+        &:after {
+          border-color: transparent transparent #FFF transparent;
+        }
       }
     }
   }
@@ -169,9 +180,13 @@ a {
     padding: 45px 13px 0px 13px;
     height: 28px;
     text-transform: uppercase;
-    background-position:center 6px;
-    background-repeat:no-repeat;
-    position:relative;
+    background-position: center 6px;
+    background-repeat: no-repeat;
+    position: relative;
+    text-shadow: none;
+    border-left: 1px solid #efeae4;
+    box-shadow: none;
+    @include box-shadow (#efeae4 -1px 0px 0px);
     &:visited {}
     &:hover,
     &:focus {
@@ -195,34 +210,34 @@ a {
   }
 
   .main-menu-home a {
-    background: image-url('icons/mil-icon-home-inactive.png') no-repeat center 6px;
+    background: url(../images/icons/mil-icon-home-inactive.png) no-repeat center 6px;
 
       &:hover, &.active-trail {
-        background: image-url('icons/mil-icon-home.png') no-repeat center 6px;
+        background: url(../images/icons/mil-icon-home.png) no-repeat center 6px;
       }
   }
 
   .main-menu-projects a {
-    background: image-url('icons/mil-icon-groups-inactive.png') no-repeat center 6px;
+    background: url(../images/icons/mil-icon-groups-inactive.png) no-repeat center 6px;
 
       &:hover, &.active-trail {
-        background: image-url('icons/mil-icon-groups.png') no-repeat center 6px;
+        background: url(../images/icons/mil-icon-groups.png) no-repeat center 6px;
       }
   }
 
   .main-menu-events a {
-    background: image-url('icons/mil-icon-events-inactive.png') no-repeat center 6px;
+    background: url(../images/icons/mil-icon-events-inactive.png) no-repeat center 6px;
 
     &:hover, &.active-trail {
-        background: image-url('icons/mil-icon-events.png') no-repeat center 6px;
+        background: url(../images/icons/mil-icon-events.png) no-repeat center 6px;
       }
   }
 
-  .main-menu-impact a {
-    background: image-url('icons/mil-icon-events-inactive.png') no-repeat center 6px;
+  .main-menu-node- a {
+    background: url(../images/icons/mil-icon-impact-inactive.png) no-repeat center 6px;
 
     &:hover, &.active-trail {
-        background: image-url('icons/mil-icon-events.png') no-repeat center 6px;
+        background: url(../images/icons/mil-icon-impact.png) no-repeat center 6px;
       }
   }
 }
@@ -320,4 +335,21 @@ body.front.not-logged-in #block-system-main .pane-1 {
 
 body.front.not-logged-in #block-system-main .pane-2 {
   width: 50%;
+}
+
+.block-search .selectBox-dropdown .selectBox-label {
+  color: #FFF;
+}
+
+/* Update button sty;es */
+
+.commons-sign-up, 
+.pane-commons-groups-commons-groups-create-group a, 
+#quicktabs-container-commons_bw .quicktabs-tabpage .attachment-before > a, 
+#quicktabs-container-commons_bw .quicktabs-tabpage .comment-add a, 
+#content-column .view-content input[type="submit"], 
+form.commons-events-form-float input, 
+form.commons-events-form-float input:hover, 
+.pane-commons-events-commons-events-create-event-link a {
+    @extend %btn-green;
 }
